# newreleases-dispatch-action

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example.env.sh
.github/workflows/: build.yml
src/: app.rs  github.rs  main.rs  newreleases.rs
