[package]
name = "newreleases-dispatch-action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
reqwest = { version = "0.11.9", features = ["json"]}
anyhow = "1.0.53"
async-trait = "0.1"
tower = "0.4.11"
tower-http = { version = "0.2.1", features = ["auth"]}

# for signature verification
headers = "0.3.6"

ring = "0.16.20"
hex = "0.4.3"