[package]
name = "newreleases-dispatch-action"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
reqwest = { version = "0.11.9", features = ["json"]}
anyhow = "1.0.53"
async-trait = "0.1"
tower = "0.4.11"
tower-http = { version = "0.2.3", features = ["trace"] }

# for signature verification
headers = "0.3.6"

ring = "0.16.20"
hex = "0.4.3"
tracing-tree = "0.2.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"
tracing-futures = "0.2.5"
